fixed terminal alignement

--- a/randomstuffimade/fake_terminal/public/terminal.css
+++ b/randomstuffimade/fake_terminal/public/terminal.css
@@ -6,8 +6,8 @@ body {
 }
 
 #terminal {
-  max-width: 2800px;
-  margin: auto;
+  max-width: 850px;
+  margin: 0;
 }
 
 #output {
